BugFix: Light Mode issue causing comments to be unreadable

--- a/dist-firefox/comments.css
+++ b/dist-firefox/comments.css
@@ -4,7 +4,6 @@
   overflow-x: hidden;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.08);
-  background: #0f0f0f;
   margin-top: 8px;
   padding-left: 15px;
 
